[package]
name = "vault"
version = "0.7.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"
description = "The Vault client intermediates between Bitcoin Core and the BTC Parachain."

[features]
integration = []

[dependencies]
thiserror = "1.0"
clap = "3.0.0-beta.2"
tokio = { version = "1.0", features = ["full"] }
serde = "1.0.116"
parity-scale-codec = "2.0.0"
hex = "0.4.2"
futures = "0.3.5"
async-trait = "0.1.40"
sha2 = "0.8.2"
git-version = "0.3.4"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter", "fmt"] }
tracing-futures = { version = "0.2.5" }

jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["http", "tls"] }

# Workspace dependencies
bitcoin = { path = "../bitcoin", features = ["cli"] }
runtime = { path = "../runtime" }
service = { path = "../service" }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }

[dev-dependencies]
mockall = "0.8.1"

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils"] }