[package]
name = "vault"
version = "1.1.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"
description = "The Vault client intermediates between Bitcoin Core and the BTC Parachain."

[features]
integration = []
parachain-metadata-interlay = ["runtime/parachain-metadata-interlay"]
parachain-metadata-kintsugi = ["runtime/parachain-metadata-kintsugi"]
parachain-metadata-interlay-testnet = ["runtime/parachain-metadata-interlay-testnet"]
parachain-metadata-kintsugi-testnet = ["runtime/parachain-metadata-kintsugi-testnet"]

[dependencies]
thiserror = "1.0"
clap = "3.1"
tokio = { version = "1.0", features = ["full"] }
tokio-metrics = { version = "0.1.0", default-features = false }
serde = "1.0.136"
parity-scale-codec = "3.0.0"
hex = "0.4.2"
futures = "0.3.5"
async-trait = "0.1.40"
sha2 = "0.8.2"
git-version = "0.3.4"

lazy_static = "1.4"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter", "fmt"] }
tracing-futures = { version = "0.2.5" }

jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["http", "tls"] }

# Workspace dependencies
bitcoin = { path = "../bitcoin", features = ["cli"] }
runtime = { path = "../runtime" }
service = { path = "../service" }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

[dev-dependencies]
mockall = "0.8.1"

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils"] }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
