[package]
name = "subxt-client"
version = "0.1.0"
authors = []
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt-client"
homepage = "https://www.parity.io/"
description = "Embed a substrate node into your subxt application."
keywords = ["parity", "substrate", "blockchain"]

[dependencies]
async-std = "1.8.0"
futures = { version = "0.3.9", features = ["compat"], package = "futures" }
futures01 = { package = "futures", version = "0.1.29" }
jsonrpsee = "0.10.1"
jsonrpsee-types = "0.10.1"
jsonrpsee-core = { version = "0.10.1", features = ["async-client"] }

log = "0.4.13"
serde_json = "1.0.61"
thiserror = "1.0.23"

sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

tokio = { version = "1.10", features = ["time", "rt-multi-thread"] }

[target.'cfg(target_arch="x86_64")'.dependencies]
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false, features = [
    "wasmtime",
] }

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
env_logger = "0.8.2"
node-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
tempdir = "0.3.7"